# folder_manager

./: .gitignore  BUILD.md  package-lock.json  package.json  people_folder_manager.spec
.github/workflows/: build-macos-people-folder.yml
docs/: DESKTOP_FIRST.md
folder_manage/: _mov_meta.json  _read_test.json  _tag_test.json  api-server.spec  app_paths.py  exiftool_session.py  folder_tags_migration.py  media_keyword_service.py  media_path_filters.py  people_data_store.py  people_folder_manager.py  requirements.txt  tag_index_store.py  tag_repository.py
folder_manage/api/: __main__.py  access_log.py  constants.py  deps.py  main.py  net_compat.py  schemas.py
folder_manage/api/routes/: config.py  files.py  preview.py  tags.py  thumbnails.py  tree.py
folder_manage/api/services/: __init__.py  file_operations.py  (+4 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: build_sidecar.mjs  build_sidecar.ps1  build_sidecar_macos.sh  check_api_server.ps1  generate_app_icons.py  generate_macos_icons.sh  install_exiftool.ps1  install_exiftool_macos.sh  install_mpv.ps1  launch_app.py  smoke_test_sidecar.sh  verify_sidecar_ffmpeg.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/patches/drag/: Cargo.toml
src-tauri/patches/drag/src/platform_impl/windows/: mod.rs
src-tauri/src/: file_drag.rs  lib.rs  main.rs  sidecar_lifecycle.rs
src-tauri/src/mpv/: commands.rs  ipc.rs  mod.rs  player.rs  state.rs  surface.rs
(+38 files in other folders)
