[package]
name = "people-folder-manager"
version = "2.0.0"
description = "人物資料夾管理器"
authors = ["PeopleFolderManager"]
edition = "2021"

[lib]
name = "people_folder_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "io-util"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_Pipes",
  "Win32_Storage_FileSystem",
  "Win32_Security",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
